clusters/dev/mwdb/ingress/mwdb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mwdb-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
        - path: /mwdb
          pathType: Prefix
          backend:
            service:
              name: mwdb
              port: 
                number: 8080
        - path: /dashboard
          pathType: Prefix
          backend:
            service:
              name: karton-dashboard
              port: 
                number: 8030
